--- a/pages/common/navbar.html
+++ b/pages/common/navbar.html
@@ -1,4 +1,4 @@
-<header id="navbar">
+<header id="navbar" class="navbar">
     <div class="row">
         <div class="navbar">
             <div class="left">
@@ -28,3 +28,14 @@
         </div>
     </div>
 </header>
+
+
+<nav class="bottom_menu">
+    <ul>
+        <li>
+            <a href="#">
+
+            </a>
+        </li>
+    </ul>
+</nav>
