--- a/pages/index.html
+++ b/pages/index.html
@@ -12,22 +12,26 @@
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
 
-
     <!--css-->
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/style.css">
     <!--//css-->
 
-
-
-
 </head>
 <body>
+
     <div class="wrap">
-        <ul>
+        <ul style="margin-top: 100px;">
             <li><a href="./main.html">main</a></li>
+            <li><a href="./storeList.html">storelist</a></li>
+            <li><a href="./storeinfo.html">store_detail</a></li>
+            <li><a href="./channelList.html">channelList</a></li>
         </ul>
     </div>
 
 </body>
 </html>
+
+
+
+
