변경사항 반영

--- a/pages/storeinfo.html
+++ b/pages/storeinfo.html
@@ -38,7 +38,7 @@
         
         <div class="storeinfo_info_top">
             <div class="storeinfo_info_img">
-                <img src="/img/no_image.jpeg"/>
+                <img src="/img/no_image.jpg"/>
             </div>
 
             <div class="storeinfo_info_content">
