--- a/pages/index.html
+++ b/pages/index.html
@@ -12,6 +12,9 @@
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
 
+
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
+
     <!--css-->
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/style.css">
@@ -26,6 +29,8 @@
             <li><a href="./storeList.html">storelist</a></li>
             <li><a href="./storeinfo.html">store_detail</a></li>
             <li><a href="./channelList.html">channelList</a></li>
+            <li><a href="./mypage.html">channelList</a></li>
+            <li><a href="./storydetail.html">storydetail</a></li>
         </ul>
     </div>
 
