커밋메세지

--- a/pages/index.html
+++ b/pages/index.html
@@ -31,6 +31,9 @@
             <li><a href="./channelList.html">channelList</a></li>
             <li><a href="./mypage.html">channelList</a></li>
             <li><a href="./storydetail.html">storydetail</a></li>
+
+
+            <li><a href="./storydetail.html">상점정보</a></li>
         </ul>
     </div>
 
