--- a/pages/storeinfo.html
+++ b/pages/storeinfo.html
@@ -37,7 +37,7 @@
     <div class="store_info_wrap">
         
         <div class="storeinfo_info_top">
-            <div class="storeinfo_info_img">
+            <div class="detailpage_img_wrap">
                 <img src="/img/no_image.jpg"/>
             </div>
 
