변경사항들 반영

--- a/pages/index.html
+++ b/pages/index.html
@@ -29,8 +29,11 @@
             <li><a href="./storeList.html">storelist</a></li>
             <li><a href="./storeinfo.html">store_detail</a></li>
             <li><a href="./channelList.html">channelList</a></li>
-            <li><a href="./mypage.html">channelList</a></li>
+            <li><a href="./mypage.html">mypage</a></li>
             <li><a href="./storydetail.html">storydetail</a></li>
+            <li><a href="./storyComment.html">storyComment</a></li>
+
+            <li><a href="./live.html">live</a></li>
 
 
         </ul>
