--- a/pages/index.html
+++ b/pages/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="/css/style.css">
     <!--//css-->
 
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
 </head>
 <body>
 
@@ -34,6 +36,12 @@
             <li><a href="./storyComment.html">storyComment</a></li>
 
             <li><a href="./live.html">live</a></li>
+            <li><a href="./request.html">request</a></li>
+            <li><a href="./request_detail.html">request_detail</a></li>
+            <li><a href="./product_detail.html">product_detail</a></li>
+
+
+            <li><a href="./shopping_cart.html">shopping_cart</a></li>
 
 
         </ul>
