--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-"Hello world" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <!--plugin css-->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+
+
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+    <!--css-->
+    <link rel="stylesheet" href="<%= BASE_URL %>/css/common.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>/css/style.css">
+    <!--//css-->
+
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+</head>
+<body>
+
+    <div class="wrap">
+        <ul style="margin-top: 100px;">
+            <li><a href="<%= BASE_URL %>/pages/main.html">main</a></li>
+            <li><a href="<%= BASE_URL %>/pages/storeList.html">storelist</a></li>
+            <li><a href="<%= BASE_URL %>/pages/storeinfo.html">store_detail</a></li>
+            <li><a href="./channelList.html">channelList</a></li>
+            <li><a href="<%= BASE_URL %>/pages/mypage.html">mypage</a></li>
+            <li><a href="<%= BASE_URL %>/pages/storydetail.html">storydetail</a></li>
+            <li><a href="<%= BASE_URL %>/pages/storyComment.html">storyComment</a></li>
+
+            <li><a href="<%= BASE_URL %>/pages/live.html">live</a></li>
+            <li><a href="<%= BASE_URL %>/pages/request.html">request</a></li>
+            <li><a href="<%= BASE_URL %>/pages/requestDetail.html">request_detail</a></li>
+            <li><a href="<%= BASE_URL %>/pages/productDetail.html">product_detail</a></li>
+
+
+            <li><a href="<%= BASE_URL %>/pages/shoppingCart.html">shopping_cart</a></li>
+
+
+        </ul>
+    </div>
+
+</body>
+</html>
+
+
+
+
