--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <!--css-->
-    <link rel="stylesheet" href="<%= BASE_URL %>/css/common.css">
-    <link rel="stylesheet" href="<%= BASE_URL %>/css/style.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!--//css-->
 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -27,21 +27,18 @@
 
     <div class="wrap">
         <ul style="margin-top: 100px;">
-            <li><a href="<%= BASE_URL %>/pages/main.html">main</a></li>
-            <li><a href="<%= BASE_URL %>/pages/storeList.html">storelist</a></li>
-            <li><a href="<%= BASE_URL %>/pages/storeinfo.html">store_detail</a></li>
-            <li><a href="./channelList.html">channelList</a></li>
-            <li><a href="<%= BASE_URL %>/pages/mypage.html">mypage</a></li>
-            <li><a href="<%= BASE_URL %>/pages/storydetail.html">storydetail</a></li>
-            <li><a href="<%= BASE_URL %>/pages/storyComment.html">storyComment</a></li>
-
-            <li><a href="<%= BASE_URL %>/pages/live.html">live</a></li>
-            <li><a href="<%= BASE_URL %>/pages/request.html">request</a></li>
-            <li><a href="<%= BASE_URL %>/pages/requestDetail.html">request_detail</a></li>
-            <li><a href="<%= BASE_URL %>/pages/productDetail.html">product_detail</a></li>
-
-
-            <li><a href="<%= BASE_URL %>/pages/shoppingCart.html">shopping_cart</a></li>
+            <li><a href="/pages/main.html">main</a></li>
+            <li><a href="/pages/storeList.html">storelist</a></li>
+            <li><a href="/pages/storeinfo.html">store_detail</a></li>
+            <li><a href="/channelList.html">channelList</a></li>
+            <li><a href="/pages/mypage.html">mypage</a></li>
+            <li><a href="/pages/storydetail.html">storydetail</a></li>
+            <li><a href="/pages/storyComment.html">storyComment</a></li>
+            <li><a href="/pages/live.html">live</a></li>
+            <li><a href="/pages/request.html">request</a></li>
+            <li><a href="/pages/requestDetail.html">request_detail</a></li>
+            <li><a href="/pages/productDetail.html">product_detail</a></li>
+            <li><a href="/pages/shoppingCart.html">shopping_cart</a></li>
 
 
         </ul>
