commit index url

--- a/pages/channelList.html
+++ b/pages/channelList.html
@@ -10,7 +10,7 @@
 
         $(document).ready(function() {
             $.ajax({
-                url : "./index.html",
+                url : "/index.html",
                 dataType: 'html',
                 success : function(data) {
                     var target = $('head').html(data).find('head');
