--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="/pages/main.html">main</a></li>
             <li><a href="/pages/storeList.html">storelist</a></li>
             <li><a href="/pages/storeinfo.html">store_detail</a></li>
-            <li><a href="/channelList.html">channelList</a></li>
+            <li><a href="/pages/channelList.html">channelList</a></li>
             <li><a href="/pages/mypage.html">mypage</a></li>
             <li><a href="/pages/storydetail.html">storydetail</a></li>
             <li><a href="/pages/storyComment.html">storyComment</a></li>
