--- a/index.html
+++ b/index.html
@@ -22,31 +22,74 @@
 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
+
 </head>
 <body>
 
-    <div class="wrap">
-        <ul style="margin-top: 100px;">
-            <li><a href="/pages/main.html">main</a></li>
-            <li><a href="/pages/storeList.html">storelist</a></li>
-            <li><a href="/pages/storeinfo.html">store_detail</a></li>
-            <li><a href="/pages/channelList.html">channelList</a></li>
-            <li><a href="/pages/mypage.html">mypage</a></li>
-            <li><a href="/pages/storydetail.html">storydetail</a></li>
-            <li><a href="/pages/storyComment.html">storyComment</a></li>
-            <li><a href="/pages/live.html">live</a></li>
-            <li><a href="/pages/request.html">request</a></li>
-            <li><a href="/pages/requestDetail.html">request_detail</a></li>
-            <li><a href="/pages/productDetail.html">product_detail</a></li>
-            <li><a href="/pages/shoppingCart.html">shopping_cart</a></li>
+    <div class="wrap" style="margin: 20px 50px;">
+        
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">메인</h2>
+            <ul>
+                <li><a href="/pages/main.html">main</a></li>
+            </ul>
+        </div>
+
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">상점</h2>
+            <ul>
+                <li><a href="/pages/storeList.html">storelist</a></li>
+                <li><a href="/pages/storeinfo.html">store_detail</a></li>
+            </ul>            
+        </div>
+
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">채널</h2>
+            <ul>
+                <li><a href="/pages/channelList.html">channelList</a></li>
+            </ul> 
+        </div>
 
 
-        </ul>
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">스토리</h2>
+            <ul>
+                <li><a href="/pages/storydetail.html">storydetail</a></li>
+                <li><a href="/pages/storyComment.html">storyComment</a></li>
+            </ul> 
+        </div>
+
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">의뢰 견적</h2>
+            <ul>
+                <li><a href="/pages/request.html">request</a></li>
+                <li><a href="/pages/requestDetail.html">request_detail</a></li>
+            </ul>
+        </div>
+
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">상품</h2>
+            <ul>
+                <li><a href="/pages/productDetail.html">product_detail</a></li>
+                <li><a href="/pages/shoppingCart.html">shopping_cart</a></li>
+            </ul>
+        </div>
+
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">상품</h2>
+            <ul>
+                <li><a href="/pages/mypage.html">mypage</a></li>
+           
+                <li><a href="/pages/live.html">live</a></li>   
+                <li><a href="/pages/notification.html">notification</a></li>
+                <li><a href="/pages/messenger.html">messenger</a></li>
+            </ul>
+        </div>
+
+
     </div>
 
 </body>
 </html>
-
-
 
 
