--- a/pages/storyComment.html
+++ b/pages/storyComment.html
@@ -38,29 +38,25 @@
     <div class="page_wrap">
         <div class="all_commnets_wrap">
 
-            <!--댓글 없을 경우-->
-            <div class="empty_wrap">
-                <div class="img">
-                    <img src="/img/Comments.png" alt="" class="comments_icon">
+            <div class="message_wrap row">
+                <div class="profile_img">
+                    <img src="/img/no_image.jpg" alt="">
                 </div>
 
-                <p>스토리에 댓글이 없습니다.</p>
+                <div class="input_box">
+                    <input type="text" placeholder="메세지를 입력하세요.">
+                    <button>등록</button>
+                </div>
             </div>
 
-            <div class="message_wrap">
-                <div class="row">
-
-
-                    <div class="profile_img">
-                        <img src="/img/no_image.jpg" alt="">
+             <!--댓글 없을 경우-->
+            <div class="empty">
+                <div class="content">
+                    <div class="img">
+                        <img src="/img/Comments.png" alt="" class="comments_icon">
                     </div>
-
-                    <div class="input_box">
-                        <input type="text" placeholder="메세지를 입력하세요.">
-                        <button>등록</button>
-                    </div>
-
-
+    
+                    <p>스토리에 댓글이 없습니다.</p>
                 </div>
             </div>
 
