--- a/pages/messenger.html
+++ b/pages/messenger.html
@@ -41,10 +41,38 @@
     </nav>
 
 
-
-    <div class="messenger_wrap">
+    <div class="messenger_tit">
         <div class="count row">
             채널 접속자 (1)
+        </div>
+    </div>
+
+
+    <div class="messenger_wrap row">
+
+        <div class="other">
+            <div class="profile_img">
+                <img src="/img/no_image.jpg" alt="">
+            </div>
+
+            <div class="text_box">
+                사진확인 후 연락주세요.
+            </div>
+
+            <span class="date">오후 8:16</span>
+        </div>
+
+
+        <div class="me">
+            <div class="profile_img">
+                <img src="/img/no_image.jpg" alt="">
+            </div>
+
+            <div class="text_box">
+                사진확인 후 연락주세요.
+            </div>
+
+            <span class="date">오후 8:16</span>
         </div>
     </div>
 
@@ -65,7 +93,7 @@
         <div class="send_wrap">
             <img src="/img/white_icon/top_arrow_11px.svg" />
         </div>
-        
+
     </div>
     
 </body>
