--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
             </ul>
         </div>
 
+
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">로그인</h2>
+            <ul>
+                <li><a href="/pages/login.html">로그인</a></li>
+                <li><a href="/pages/memberSearch.html">아이디찾기</a></li>
+            </ul>
+        </div>
+
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">상품</h2>
             <ul>
