--- a/pages/memberSearch.html
+++ b/pages/memberSearch.html
@@ -49,25 +49,48 @@
                 <!--일반회원-->
                 <div class="general_member_search">
 
-                    <div class="radio_btn_wrap">
-                        <input id="general_member_phone_search" type="radio" checked />
-                        <div><span></span></div>
-                        <label for="general_member_phone_search">
-                            <p>등록된 휴대폰 번호로 찾기</p>
-
-                        </label>
+                    <div class="phone_form">
+                        <div class="radio_btn_wrap">
+                            <input id="general_member_phone_search" type="radio" checked />
+                            <label for="general_member_phone_search">
+                                <div><span></span></div>
+                                <p class="tit">등록된 휴대폰 번호로 찾기</p>
+                                <p>가입 당시 입력한 휴대전화 번호를 통해 아이디를 찾을 수 있습니다.</p>
+                            </label>
+                        </div>
+    
+                        <div class="search_input">
+                            <input class="default_type" type="text" name="search_name" placeholder="가입한 회원명">
+                        </div>
+    
+                        <div class="search_input">
+                            <input class="default_type" type="number" name="search_phone_number" placeholder="휴대폰 번호">
+                        </div>
                     </div>
 
-                    <div class="search_input">
-                        <input class="default_type" type="text" name="search_name" placeholder="가입한 회원명">
+                    <div class="email_form">
+                        <div class="radio_btn_wrap">
+                            <input id="general_member_phone_search" type="radio" checked />
+                            <label for="general_member_phone_search">
+                                <div><span></span></div>
+                                <p class="tit">등록된 이메일로 찾기</p>
+                                <p>가입 당시 입력한 이메일을 통해 아이디를 찾을 수 있습니다.</p>
+                            </label>
+                        </div>
                     </div>
 
-                    <div class="search_input">
-                        <input class="default_type" type="number" name="search_phone_number" placeholder="휴대폰 번호">
-                    </div>
+                    <button class="btn">
+                        확인
+                    </button>
 
                 </div>
                 <!--//일반회원-->
+
+                <!--업체회원-->
+                <div class="company_member_search">
+
+                </div>
+                <!--//업체회원-->
 
             </div>
         </form>
