--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
+      type="text/css"
     />
 
 
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <!--css-->
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/common.css" type="text/css">
+    <link rel="stylesheet" href="/css/style.css" type="text/css">
     <!--//css-->
 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -92,6 +93,16 @@
                 <li><a href="/pages/live.html">live</a></li>   
                 <li><a href="/pages/notification.html">notification</a></li>
                 <li><a href="/pages/messenger.html">messenger</a></li>
+            </ul>
+        </div>
+
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">회원가입</h2>
+            <ul>
+                <li><a href="/pages/member/step1.html">step1</a></li>
+                <li><a href="/pages/member/step2.html">step2</a></li>
+                <li><a href="/pages/member/step3.html">step3</a></li>
+                <li><a href="/pages/member/step4.html">step4</a></li>
             </ul>
         </div>
 
