--- a/pages/live.html
+++ b/pages/live.html
@@ -29,7 +29,7 @@
                 <div>
                     <img src="/img/main_live_icon@1x.png" alt="라이브아이콘">
                 </div>
-
+ 
                 <div class="icon_wrap">
                     <img src="/img/union_02.png" alt="">
                     32
@@ -44,19 +44,19 @@
 
             <div class="right">
                 <button>
-                    <img src="/img/live_right_icon_01.png" alt="">
+                    <img src="/img/live_right_icon_01.svg" alt="">
                 </button>
 
                 <button>
-                    <img src="/img/live_right_icon_02.png" alt="">
+                    <img src="/img/live_right_icon_02.svg" alt="">
                 </button>
 
                 <button>
-                    <img src="/img/live_right_icon_03.png" alt="">
+                    <img src="/img/live_right_icon_03.svg" alt="">
                 </button>
 
                 <button>
-                    <img src="/img/live_right_icon_04.png" alt="">
+                    <img src="/img/live_right_icon_04.svg" alt="">
                 </button>
             </div>
         </div>
@@ -92,11 +92,11 @@
 
                 <div class="btn_wrap">
                     <button>
-                        <img src="/img/commet_white.png" alt="">
+                        <img src="/img/commet_white.svg" alt="">
                     </button>
     
                     <button>
-                        <img src="/img/heart_white.png" alt="">
+                        <img src="/img/heart_white.svg" alt="">
                     </button>
                 </div>
          
@@ -126,11 +126,11 @@
         <!--left 전체채팅/쇼핑카트-->
         <div class="live_left">
             <div>
-                <img src="/img/all_chat.png" alt="채팅목록보기">
+                <img src="/img/all_chat.svg" alt="채팅목록보기">
             </div>
 
             <div>
-                <img src="/img/shopping_cart_white.png" alt="장바구니">
+                <img src="/img/shopping_cart_white.svg" alt="장바구니">
             </div>
         </div>
         <!--//left 전체채팅/쇼핑카트-->
