--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -55,42 +55,42 @@
             <div class="mypage_category_link">
                 <div>
                     <div>
-                        <img src="/img/mypage_01.png" alt="">
+                        <img src="/img/mypage/mypage_01.svg" alt="">
                         <span>쿠폰함</span>
                     </div>
                 </div>
 
                 <div>
                     <div>
-                        <img src="/img/mypage_02.png" alt="">
+                        <img src="/img/mypage/mypage_02.svg" alt="">
                         <span>포인트</span>
                     </div>
                 </div>
 
                 <div>
                     <div>
-                        <img src="/img/mypage_03.png" alt="">
+                        <img src="/img/mypage/mypage_03.svg" alt="">
                         <span>찜 목록</span>
                     </div>
                 </div>
 
                 <div>
                     <div>
-                        <img src="/img/mypage_04.png" alt="">
+                        <img src="/img/mypage/mypage_04.svg" alt="">
                         <span>나의 쇼핑</span>
                     </div>
                 </div>
 
                 <div>
                     <div>
-                        <img src="/img/mypage_05.png" alt="">
+                        <img src="/img/mypage/mypage_05.svg" alt="">
                         <span>나의 스토어</span>
                     </div>
                 </div>
 
                 <div>
                     <div>
-                        <img src="/img/mypage_06.png" alt="">
+                        <img src="/img/mypage/mypage_06.svg" alt="">
                         <span>나의 채널</span>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
 
             <div>
                 <div>
-                    <img src="/img/mypage_bottom_icon_01.png" alt="">
+                    <img src="/img/mypage/mypage_bottom_icon_01.svg" alt="">
                     <p>공지사항</p>
                 </div>
 
@@ -114,7 +114,7 @@
 
             <div>
                 <div>
-                    <img src="/img/mypage_bottom_icon_02.png" alt="">
+                    <img src="/img/mypage/mypage_bottom_icon_02.svg" alt="">
                     <p>자주 묻는 질문</p>
                 </div>
 
@@ -123,7 +123,7 @@
 
             <div>
                 <div>
-                    <img src="/img/mypage_bottom_icon_03.png" alt="">
+                    <img src="/img/mypage/mypage_bottom_icon_03.svg" alt="">
                     <p>고객센터</p>
                 </div>
 
