--- a/pages/notification.html
+++ b/pages/notification.html
@@ -82,7 +82,7 @@
 
             <div class="content">
                 <div class="img">
-
+                    <img src="/img/bell.svg" alt="">
                 </div>
                 <p>알림이 없습니다.</p>
             </div>
