--- a/pages/productDetail.html
+++ b/pages/productDetail.html
@@ -80,7 +80,7 @@
             </div>
 
             <div class="like_btn">
-                <img src="/img/heart_plus_18.png" alt="">
+                <img src="/img/heart_plus_18.svg" alt="">
             </div>
 
         </div>
@@ -123,7 +123,7 @@
 
     <div class="product_purchase">
         <div class="like_btn">
-            <img src="/img/heart_gray.png" alt="">
+            <img src="/img/heart_gray.svg" alt="">
         </div>
         <button>구매하기</button>
     </div>
