--- a/pages/request.html
+++ b/pages/request.html
@@ -67,9 +67,7 @@
 
         <div class="request_list">
             <p>의뢰 내용</p> 
-            <textarea placeholder="내용 입력">
-
-            </textarea>
+            <textarea class="default_type" placeholder="내용 입력"></textarea>
         </div>
 
     </div>
