--- a/pages/storyComment.html
+++ b/pages/storyComment.html
@@ -53,7 +53,7 @@
             <div class="empty">
                 <div class="content">
                     <div class="img">
-                        <img src="/img/Comments.png" alt="" class="comments_icon">
+                        <img src="/img/Comments.svg" alt="" class="comments_icon">
                     </div>
     
                     <p>스토리에 댓글이 없습니다.</p>
