--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <h2 style="font-size: 15px;">채널</h2>
             <ul>
                 <li><a href="/pages/channelList.html">channelList</a></li>
+                <li><a href="/pages/channelInfo.html">channelInfo</a></li>
             </ul> 
         </div>
 
