--- a/pages/login.html
+++ b/pages/login.html
@@ -81,9 +81,13 @@
 
 
             <ul class="other_login">
-                <li><img src="/img/login_kakao.svg" alt="카카오톡 로그인"/></li>
-                <li><img src="/img/login_naver.svg" alt="네이버 로그인"/></li>
-                <li><img src="/img/login_google.svg" alt="구글 로그인"/></li>
+                <li class="kakao">
+                    <img src="/img/kakao.svg" alt="카카오톡 로그인"/>
+                </li>
+                <li class="naver"><img src="/img/naver.svg" alt="네이버 로그인"/></li>
+                <li class="google">
+                    <span>G</span>
+                </li>
             </ul>
         </form>
     </div>
