--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <ul>
                 <li><a href="/pages/channelList.html">channelList</a></li>
                 <li><a href="/pages/channelInfo.html">channelInfo</a></li>
+                <li><a href="/pages/channel_member.html">channel_member</a></li>
             </ul> 
         </div>
 
