--- a/pages/channelInfo.html
+++ b/pages/channelInfo.html
@@ -46,61 +46,63 @@
         </div>
 
         <button class="right_btn">
-            <img src="/img/setting.svg" alt="">
+            <img src="/img/setting_plus.svg" alt="">
         </button>
     </nav>
 
-    <div class="channel_info">
+    <div class="channel_info_wrap">
 
-        <div class="info row">
-            <button class="member_apply_btn">회원신청 +</button>
+        <div class="info">
 
-            <div class="profile_wrap">
+            <div class="info_top row">
                 <div class="img">
                     <div class="profile_img">
-                        <img src="/img/no_image.jpg" alt="">
+                        <img src="/img/smile_white.svg" alt="">
                     </div>
 
-                    <div class="state">개인</div>
+                    <div class="camera">
+                        <img src="/img/camera.svg" alt="">
+                    </div>
                 </div>
 
-                <p>채널명</p>
+                <div class="content">
+                    <button class="member_apply_btn">회원신청 +</button>
+                    <div>
+                        <span>팔로잉 <span class="count">0</span></span>
+                        <span>팔로워 <span class="count">0</span></span>
+                    </div>
+                </div>      
+            </div>
 
-                <div class="level">
-                    <img src="/img/level.svg" alt="">
-                    마스터
+            <p class="kind row">개인채널</p>
+            <p class="name row">하이루</p>
+            <p class="date row">2021년  1월 1일 시작</p>
+
+
+            <div class="list_wrap">
+
+                <div>
+                    <a href="#">
+                        <img src="/img/notice.svg" alt="">
+                        <span>알림내역</span>
+                    </a>
                 </div>
 
-                <div class="list_wrap">
-                    <div>
-                        <a href="#">
-                            <img src="/img/following.svg" alt="">
-                            <span>팔로잉</span>
-                        </a>
-                    </div>
+                <div>
+                    <a href="#">
+                        <img src="/img/chating.svg" alt="">
+                        <span>채팅내역</span>
+                    </a>
+                </div>
 
-                    <div>
-                        <a href="#">
-                            <img src="/img/notice.svg" alt="">
-                            <span>알림</span>
-                        </a>
-                    </div>
-
-                    <div>
-                        <a href="#">
-                            <img src="/img/chating.svg" alt="">
-                            <span>채팅</span>
-                        </a>
-                    </div>
-
-                    <div>
-                        <a href="#">
-                            <img src="/img/heart_plus.svg" alt="">
-                            <span>찜</span>
-                        </a>
-                    </div>
+                <div>
+                    <a href="#">
+                        <img src="/img/heart_plus.svg" alt="">
+                        <span>찜 목록</span>
+                    </a>
                 </div>
             </div>
+   
 
         </div>
 
