--- a/pages/notification.html
+++ b/pages/notification.html
@@ -53,7 +53,7 @@
 
     <div class="default_wrap">
 
-        <!-- <div class="noti_wrap row">
+        <div class="noti_wrap row">
             <div class="noti_list">
                 <div class="title">
                     <div class="img">
@@ -75,10 +75,10 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <!--알림없을때-->
-        <div class="empty">
+        <!-- <div class="empty">
 
             <div class="content">
                 <div class="img">
@@ -87,7 +87,7 @@
                 <p>알림이 없습니다.</p>
             </div>
 
-        </div>
+        </div> -->
         <!--//알림없을때-->
 
     </div>
