--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <li><a href="/pages/channelList.html">channelList</a></li>
                 <li><a href="/pages/channelInfo.html">channelInfo</a></li>
                 <li><a href="/pages/channel_member.html">channel_member</a></li>
+                <li><a href="/pages/channelQuestion.html">channelQuestion</a></li>
             </ul> 
         </div>
 
