--- a/pages/main.html
+++ b/pages/main.html
@@ -6,31 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <!--plugin css-->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="/css/style.css" type="text/css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $.ajax({
-                url : "/index.html",
-                dataType: 'html',
-                success : function(data) {
-                    var target = $('head').html(data).find('head');
-                    $('head').append(target);
-                }
-            });
-        });
 
-
-        $(document).ready(function() {
-            $.ajax({
-                url : "./common/navbar.html",
-                dataType : 'html',
-                success : function(data) {
-                    $('.wrap').prepend(data);
-                }
-            });
-        });
-
-    </script>
 
 </head>
 <body>
