--- a/pages/productDetail.html
+++ b/pages/productDetail.html
@@ -5,22 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script>
-
-        $(document).ready(function() {
-            $.ajax({
-                url : "/index.html",
-                dataType: 'html',
-                success : function(data) {
-                    var target = $('head').html(data).find('head');
-                    $('head').append(target);
-                }
-            });
-        });
-    </script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <nav class="detail_page_top">
@@ -121,11 +106,17 @@
 
     </div>
 
-    <div class="product_purchase">
-        <div class="like_btn">
-            <img src="/img/heart_gray.svg" alt="">
+
+
+    <div class="product_purchase bottom_button">
+
+        <div class="purchase row">
+            <div class="like_btn">
+                <img src="/img/heart_gray.svg" alt="">
+            </div>
+            <button class="btn_style_02">구매하기</button>
         </div>
-        <button>구매하기</button>
+        
     </div>
 
     <!-- Swiper JS -->
