--- a/pages/shoppingCart.html
+++ b/pages/shoppingCart.html
@@ -5,21 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script>
 
-        $(document).ready(function() {
-            $.ajax({
-                url : "/index.html",
-                dataType: 'html',
-                success : function(data) {
-                    var target = $('head').html(data).find('head');
-                    $('head').append(target);
-                }
-            });
-        });
-    </script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <nav class="detail_page_top border">
@@ -172,12 +161,16 @@
         </div>
     </div>
 
-    <div class="page_bottom_btn row">
-        <div class="sum">
-            전체 상품 0원 + 배송비 0원 - 할인 0원 = <strong>총 0원</strong>
+    <div class="bottom_button">
+
+        <div class="row">
+            <div class="sum">
+                전체 상품 0원 + 배송비 0원 - 할인 0원 = <strong>총 0원</strong>
+            </div>
+    
+            <button class="btn_style_02">주문하기</button>
         </div>
 
-        <button>주문하기</button>
     </div>
 </body>
 </html>
