--- a/pages/main.html
+++ b/pages/main.html
@@ -814,6 +814,48 @@
 
     </div>
 
+
+    <nav id="bottom_nav">
+        <ul>
+            <li class="on">
+                <a href="#">
+                    <img src="/img/bottomnav/home_on.svg" alt="">
+                    <span>홈</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="#">
+                    <img src="/img/bottomnav/map.svg" alt="">
+                    <span>내주변</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="#">
+                    <img src="/img/bottomnav/plus.svg" alt="">
+                    <span>등록</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="#">
+                    <img src="/img/bottomnav/message.svg" alt="">
+                    <span>메세지</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="#">
+                    <img src="/img/bottomnav/mypage.svg" alt="">
+                    <span>My</span>
+                </a>
+            </li>
+
+
+        </ul>
+    </nav>
+
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- Initialize Swiper -->
