--- a/pages/productDetail.html
+++ b/pages/productDetail.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
+
+    <!--plugin css-->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+      type="text/css"
+    />
+
 </head>
 <body>
     <nav class="detail_page_top">
